Run paxos events in a EventWorkPool ok