@@ -53,7 +53,6 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
-    //implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     implementation group: 'com.beust', name: 'jcommander', version: '1.78'
     implementation group: 'org.iq80.leveldb', name: 'leveldb', version: '0.12'
@@ -65,5 +64,5 @@ dependencies {
 
 // Define the main class for the application
 mainClassName = 'org.axesoft.tans.server.ServerApp'
-applicationDefaultJvmArgs = ['-Xmx512m', '-XX:NewSize=256m',
-                             '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=5','-XX:+PrintGCDetails']
+applicationDefaultJvmArgs = ['-server', '-Xmx512m', '-XX:+UseG1GC',
+                             '-XX:MaxGCPauseMillis=5','-Xlog:gc*']
